--- a/install-jenkins.yml
+++ b/install-jenkins.yml
@@ -32,22 +32,24 @@
         path: /opt/jdk1.8.0_161/bin/java
         link: /usr/bin/java
 
-   - name: selected java version
+   - name: selected jar version
      alternatives:
         name: jar
         path: /opt/jdk1.8.0_161/bin/jar
         link: /usr/bin/jar
 
-   - name: selected java version
+   - name: selected javac version
      alternatives:
         name: javec
         path: /opt/jdk1.8.0_161/bin/javac
         link: /usr/bin/javac
 
-   
-   - name: Setup Java Environment Variables
-     shell: export JAVA_HOME=/opt/jdk1.8.0_161 | export JRE_HOME=/opt/jdk1.8.0_161/jre | export PATH=$PATH:/opt/jdk1.8.0_161/bin:/opt/jdk1.8.0_161/jre/bin
-     
+   - name: Set Enviroment
+     environment:
+        JAVA_HOME: /opt/jdk1.8.0_161
+        JRE_HOME: /opt/jdk1.8.0_161/jre
+        PATH: $PATH:/opt/jdk1.8.0_161/bin:/opt/jdk1.8.0_161/jre/bin
+  
    - name: Install Git
      yum: 
        name: git 
