--- a/ansible/roles/install_nginx/tasks/main.yml
+++ b/ansible/roles/install_nginx/tasks/main.yml
@@ -1,24 +1,23 @@
   - name: Install epel-release
     yum:
-        name: epel-release
-        state: present
+       name: epel-release
+       state: latest
+    become: yes
 
   - name: Install Nginx
     yum:
         name: nginx
         state: latest
+    become: yes
 
   - name: Install Git
     yum:
         name: git
         state: latest
-
-  - name: copy nginx.conf
-    copy:
-        src=./nginx.conf
-        dest=/etc/nginx/conf.d/
+    become: yes
 
   - name: Start Nginx
     service:
         name=nginx
         state=started
+    become: yes
